--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <title>Bedouin Labs | we write web apps</title>
+    <!-- #5F8300 #335500 #ACCA24 #FFFFB6 #83A804 -->
     <style type="text/css" media="screen">
       
       html,body { margin: 0; padding: 0; }
@@ -17,16 +18,23 @@
       }
       a { text-decoration: none; color: #83A804;}
       a:hover { font-weight: bold;}      
-      #header img { float: right; margin: 10px 10px 20px 10px; margin-bottom: 20px; padding: 5px; border: 2px solid #aaa; background-color: white;}
       #header h1 { margin: 0px 0px -10px 0px; 
         padding: 10px 0px 0px 0px; 
         font-size: 3em;}
       #header h2 { color: #aaa; margin: 0px; padding: 8px 0px 0px 5px; font-weight: normal;}
       #page { margin-top: 20px; padding: 10px 20px 20px 20px; border-top: 1px solid #aaa; border-bottom: 1px solid #aaa; background-color: white;}
-      .product { margin: 0px 0px 8px 0px; border-left: 3px solid #aaa; padding: 10px; }
-      .product:hover { border-left: 3px solid black; }      
+      .product { margin: 0px 0px 8px 0px; 
+        border: 1px solid white; 
+        border-left: 1px solid #5f8300; 
+        padding: 10px; 
+        -moz-border-radius: 0px 8px 8px 0px;
+        -webkit-border-radius: 0px 8px 8px 0px;}
       .product h2 { margin: 0; padding: 0;font-weight: normal;}
       .product h3 { margin: 0; padding: 0; color: #999;font-weight: normal;}      
+      .product:hover { border-left: 8px solid #335500; background-color: #eee; }      
+      .product:hover h2 a { color: #335500; }            
+      .product:hover h3 { color: #5f8300; }            
+      
       #contact { float: right; text-align: right; margin-top: 10px;}
       #contact p { margin: 5px; padding: 8;}
       .smaller { font-size: 0.85em }
