--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         padding: 10px 0px 0px 0px; 
         font-size: 3em;}
       #header h2 { color: #aaa; margin: 0px; padding: 8px 0px 0px 5px; font-weight: normal;}
-      #page { margin-top: 20px; padding: 10px 20px 20px 20px; border-top: 1px solid #aaa; border-bottom: 1px solid #aaa; background-color: white;}
+      #page { margin-top: 20px; padding: 10px 20px 20px 20px; border-top: 2px solid #aaa; border-bottom: 2px solid #aaa; background-color: white;}
       .product { margin: 0px 0px 8px 0px; 
         border: 1px solid white; 
         border-left: 1px solid #5f8300; 
@@ -40,7 +40,16 @@
       .smaller { font-size: 0.85em }
       .muted { color: #777; }    
       .primary { color: #5f8300;}  
-      .secondary { color: #335500;}        
+      .secondary { color: #335500;}       
+      #footer { text-align: right;}
+      #footer img { width: 72px; 
+        padding: 3px; 
+        margin: 5px; 
+        margin-top: -20px; 
+        background-color: white;
+        border: 2px solid #aaa;}      
+      #footer img:hover {border: 2px solid #350;}      
+        
     </style>
   </head>
   <body>
@@ -67,6 +76,11 @@
         <h2><a href='http://tweetriver.com'>TweetRiver</a></h2>
         <h3>Twitter moderation platform for business</h3>
       </div>      
+    </div>
+    <div id='footer'>
+      <a href='http://twitter.com/bdainton'><img src='images/bdainton.jpg'></a>
+      <a href='http://twitter.com/efalcao'><img src='images/efalcao.jpg'></a>
+      <a href='http://twitter.com/rubyminer'><img src='images/rubyminer.jpg'></a>
     </div>
   </body>
 </html>
