Copy and font update.

--- a/index.html
+++ b/index.html
@@ -55,15 +55,14 @@
   <body>
     <div id="header">
       <!-- <img src='images/brian_small.jpg'> -->
-      <div id='contact' class='tk-anonymous-pro'>
+      <div id='contact' class='tk-test-ligurino-ttf'>
         <p><a href='http://twitter.com/bedouinlabs'>@bedouinlabs</a></p>
         <p>ping@bedouinlabs.com</p>
       </div>
       <h1 class='tk-john-doe'><span class='primary'>bedouin</span><span class='secondary'>labs</span></h1>
-      <!-- <h2 class='tk-anonymous-pro'>a tech incubator in austin, tx</h2> -->
     </div>
-    <div id='page' class='tk-anonymous-pro'>
-      <p>This is our handiwork.
+    <div id='page' class='tk-test-ligurino-ttf'>
+      <p>We write web apps. This is our handiwork.
       <div class='product'>
         <h2><a href='http://healthypractice.com'>HealthyPractice</a></h2>
         <h3>tools for auditing your medical office's charting and documentation procedures</h3>
