--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         font-family: 'Georgia','Serif';
         color: #000;
         padding: 20px;
+        font-size: 1.1em;
       }
       a { text-decoration: none; color: #83A804;}
       a:hover { font-weight: bold;}      
