--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <p>We write web apps. This is our handiwork.
       <div class='product'>
         <h2><a href='http://healthypractice.com'>HealthyPractice</a></h2>
-        <h3>tools for auditing your medical office's charting and documentation procedures</h3>
+        <h3>reimbursement and medical coding services for your healthcare practice</h3>
       </div>        
       <div class='product'>
         <h2><a href='http://sparkflare.com'>Sparkflare</a></h2>
