Don't bold hovered links. Just underline.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         font-size: 1.1em;
       }
       a { text-decoration: none; color: #83A804;}
-      a:hover { font-weight: bold;}      
+      a:hover { text-decoration: underline;}      
       #header h1 { margin: 0px 0px -10px 0px; 
         padding: 10px 0px 0px 0px; 
         font-size: 3em;}
