dropnotice in the wild

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
     <div id='page' class='tk-test-ligurino-ttf'>
       <p>We write web apps. This is our handiwork.
       <div class='product'>
+        <h2><a href='http://dropnotice.com'>DropNotice</a></h2>
+        <h3>amazon.com price drop and in-stock notifier</h3>
+      </div>                
+      <div class='product'>
         <h2><a href='http://healthypractice.com'>HealthyPractice</a></h2>
         <h3>reimbursement and medical coding services for your healthcare practice</h3>
       </div>        
