--- a/dwts_brown.html
+++ b/dwts_brown.html
@@ -342,6 +342,7 @@ var csarUrl = "http://abc.csar.go.com/DynamicCSAd?srvc=abc&itype=Banner&itype=Sp
     padding: 0px 0px 20px 0px;
     color: #ffffff;
     background-color: #8e5331;
+    width: 634px;
   }
   .tweetriver img.tweetriver-masthead { width: 649px;}
   .tweetriver .tweetriver-stream-messages { height: 600px; width: 600px; clear: both; 
