editorialTextContainer width change

--- a/dwts_brown.html
+++ b/dwts_brown.html
@@ -336,6 +336,7 @@ var csarUrl = "http://abc.csar.go.com/DynamicCSAd?srvc=abc&itype=Banner&itype=Sp
   .genericTop5Module { display: none;}
   .quigo { display: none;}
   
+  .editorialTextContainer {width:610px;}
   .tweetriver {
     margin: 0px 10px 0px 0px;
     padding: 0px 0px 20px 0px;
