--- a/dwts_brown.html
+++ b/dwts_brown.html
@@ -225,7 +225,8 @@ var csarUrl = "http://abc.csar.go.com/DynamicCSAd?srvc=abc&itype=Banner&itype=Sp
   }
   .tweetriver .tweetriver-stream-messages { height: 600px; width: 600px; clear: both; 
       margin-left: 20px; 
-      padding-right: 30px; }    
+      padding-right: 30px; 
+      background-color: #8e5331;}    
   .tweetriver .tweetriver-stream-message { border-bottom: 1px solid #592b16; }  
   .tweetriver .tweetriver-stream-body { font-size: 1.2em;}
   .tweetriver .tweetriver-stream-body a { color: #1bfbf3; font-size: 1.0em;}  
@@ -233,6 +234,7 @@ var csarUrl = "http://abc.csar.go.com/DynamicCSAd?srvc=abc&itype=Banner&itype=Sp
   .tweetriver .tweetriver-stream-time { margin: 0px; color: #3d1909;}
   .tweetriver .jScrollPaneTrack { background-color: #B18670; margin-left: 10px; padding: 0px 3px 0px 3px;}  
   .tweetriver .jScrollPaneDrag { background-color: #592b16; width: 5px;}
+  .tweetriver .jScrollPaneContainer { background-color: #8e5331;}  
 </style> 
 <script type="text/javascript"> 
 	$(function() { $('.tweetriver-stream-messages').jScrollPane();});
