--- a/dwts_brown.html
+++ b/dwts_brown.html
@@ -217,20 +217,21 @@ var csarUrl = "http://abc.csar.go.com/DynamicCSAd?srvc=abc&itype=Banner&itype=Sp
   .genericTop5Module { display: none;}
   .quigo { display: none;}
   
-  .showLeftRail .editorialTextContainer { width: ;}
+  .showLeftRail .editorialTextContainer { margin-right: 20px;}
   .tweetriver {
     margin: 0px;
     padding: 0px 0px 20px 0px;
     color: #ffffff;
     background-color: #8e5331;
   }
+  .tweetriver img.tweetriver-masthead { border: none;}
   .tweetriver .tweetriver-stream-messages { 
       height: 600px; 
       padding-left: 20px;
       padding-right: 20px;
       margin-right: 14px;
       background-color: #8e5331;}    
-  .tweetriver .tweetriver-stream-message { border-bottom: 1px solid #592b16; }  
+  .tweetriver .tweetriver-stream-message { border-bottom: 1px solid #592b16; background-color: #8e5331;}  
   .tweetriver .tweetriver-stream-body { font-size: 1.2em;}
   .tweetriver .tweetriver-stream-body a { color: #1bfbf3; font-size: 1.0em;}  
   .tweetriver .tweetriver-stream-body a.tweetriver-stream-author { color: #dfa58a;} 
