more ie6 madness

--- a/dwts_brown.html
+++ b/dwts_brown.html
@@ -231,7 +231,7 @@ var csarUrl = "http://abc.csar.go.com/DynamicCSAd?srvc=abc&itype=Banner&itype=Sp
       padding-right: 20px;
       margin-right: 14px;
       background-color: #8e5331;}    
-  .tweetriver .tweetriver-stream-message { border-bottom: 1px solid #592b16; background-color: #8e5331;}  
+  .tweetriver .tweetriver-stream-message { padding: 10px 0px 10px 0px; border-bottom: 1px solid #592b16; background-color: #8e5331; margin: 0px;}  
   .tweetriver .tweetriver-stream-body { font-size: 1.2em;}
   .tweetriver .tweetriver-stream-body a { color: #1bfbf3; font-size: 1.0em;}  
   .tweetriver .tweetriver-stream-body a.tweetriver-stream-author { color: #dfa58a;} 
