--- a/dwts_brown.html
+++ b/dwts_brown.html
@@ -246,7 +246,9 @@ var csarUrl = "http://abc.csar.go.com/DynamicCSAd?srvc=abc&itype=Banner&itype=Sp
  
 						  
 							<div class="tweetriver"> 
-                <img src='http://cdn.media.abc.go.com/temp/tweetriver/images/dwts_header_s9.jpg'> 
+							  <div>
+                  <img src='http://cdn.media.abc.go.com/temp/tweetriver/images/dwts_header_s9.jpg'> 
+                </div>
                 <script type="text/javascript" src="http://tr-disney.appspot.com/streams/aggregate"></script> 
               </div> 
               
