--- a/dwts_brown.html
+++ b/dwts_brown.html
@@ -219,7 +219,7 @@ var csarUrl = "http://abc.csar.go.com/DynamicCSAd?srvc=abc&itype=Banner&itype=Sp
   
   .showLeftRail .editorialTextContainer { margin-right: 20px;}
   .tweetriver {
-    margin: 0px;
+    margin: -10px 0px 0px 0px;
     padding: 0px 0px 20px 0px;
     color: #ffffff;
     background-color: #8e5331;
@@ -238,7 +238,7 @@ var csarUrl = "http://abc.csar.go.com/DynamicCSAd?srvc=abc&itype=Banner&itype=Sp
   .tweetriver .tweetriver-stream-time { margin: 0px; color: #3d1909;}
   .tweetriver .jScrollPaneTrack { background-color: #B18670; margin-left: 10px; padding: 0px 3px 0px 3px;}  
   .tweetriver .jScrollPaneDrag { background-color: #592b16; width: 5px;}
-  .tweetriver .jScrollPaneContainer { background-color: #8e5331;}  
+  .tweetriver .jScrollPaneContainer { background-color: #8e5331; }  
 </style> 
 <script type="text/javascript"> 
 	$(function() { $('.tweetriver-stream-messages').jScrollPane();});
