--- a/spotpeek.html
+++ b/spotpeek.html
@@ -4,6 +4,21 @@
     <title>SpotPeek: 1712 Maize Bend DR</title>
     <meta name="viewport" content="width = 320" />
     <meta name="viewport" content="width=device-width" />    
+    <style type="text/css" media="screen">
+      body {
+        font-family: 'Helvetica Neue', Arial, sans-serif;
+        color: #E2FDFF;
+        font-size: 1.2em;
+        color: #444;
+        background-color: #fff;
+      }
+
+      h3 { font-weight: normal; color: #333; }
+
+      a, a:visited {
+        color: #db0000; font-weight: bold;
+      }
+    </style>
   </head>
   <body id="listings" class="show">
     <div id="stage">
