--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
   <head>
     <script type="text/javascript" src="http://use.typekit.com/cjb3yhz.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+    <script src="http://platform.twitter.com/anywhere.js?id=9XWN8VVEngHiwMSzyz9esw&v=1">
+      </script>
+      <script type="text/javascript">
+         twttr.anywhere(function(twitter) {
+                  twitter.hovercards();
+         });
+      </script>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <title>Bedouin Labs | we write web apps</title>
     <!-- #5F8300 #335500 #ACCA24 #FFFFB6 #83A804 -->
@@ -50,13 +57,12 @@
         background-color: white;
         border: 2px solid #aaa;}      
       #footer img:hover {border: 2px solid #350;}      
-        
     </style>
   </head>
   <body>
     <div id="header">
       <div id='contact' class='tk-test-ligurino-ttf'>
-        <p><a href='http://twitter.com/bedouinlabs'>@bedouinlabs</a></p>
+        <p><a class='twitter-anywhere-user' href='http://twitter.com/bedouinlabs'>@bedouinlabs</a></p>
         <p>ping@bedouinlabs.com</p>
       </div>
       <h1 class='tk-john-doe'><span class='primary'>bedouin</span><span class='secondary'>labs</span></h1>
@@ -81,9 +87,10 @@
       </div>      
     </div>
     <div id='footer'>
-      <a href='http://twitter.com/bdainton'><img src='images/bdainton.jpg'></a>
-      <a href='http://twitter.com/efalcao'><img src='images/efalcao.jpg'></a>
-      <a href='http://twitter.com/rubyminer'><img src='images/rubyminer.jpg'></a>
+      <a class='twitter-anywhere-user' href='http://twitter.com/bdainton'><img src='images/bdainton.jpg'></a>
+      <a class='twitter-anywhere-user' href='http://twitter.com/efalcao'><img src='images/efalcao.jpg'></a>
+      <a class='twitter-anywhere-user' href='http://twitter.com/rubyminer'><img src='images/rubyminer.jpg'></a>
+      <script type="text/javascript" src="http://bl.tweetriver.com/bl.js?limit=8"></script>
     </div>
   </body>
 </html>
