Trying to get @anywhere working w/images. Tricky tricky.

--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
       </div>      
     </div>
     <div id='footer'>
-      <a class='twitter-anywhere-user' href='http://twitter.com/bdainton'><img src='images/bdainton.jpg'></a>
-      <a class='twitter-anywhere-user' href='http://twitter.com/efalcao'><img src='images/efalcao.jpg'></a>
-      <a class='twitter-anywhere-user' href='http://twitter.com/rubyminer'><img src='images/rubyminer.jpg'></a>
+      <a class='twitter-anywhere-user' href='http://twitter.com/bdainton'><span style='display:none;'>@bdainton</span><img src='images/bdainton.jpg'></a>
+      <a class='twitter-anywhere-user' href='http://twitter.com/efalcao'><span style='display:none;'>@efalcao</span><img src='images/efalcao.jpg'></a>
+      <a class='twitter-anywhere-user' href='http://twitter.com/rubyminer'><span style='display:none;'>@rubyminer</span><img src='images/rubyminer.jpg'></a>
       <script type="text/javascript" src="http://bl.tweetriver.com/bl.js?limit=8"></script>
     </div>
   </body>
