--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       </script>
       <script type="text/javascript">
          twttr.anywhere(function(twitter) {
-            twitter("#header a.twitter-anywhere-user").hovercards();
+            twitter("#contact a.twitter-anywhere-user").hovercards();
             twitter("#footer a").hovercards({
               username: function(node) {
                 return node.title;
@@ -92,9 +92,9 @@
       </div>      
     </div>
     <div id='footer'>
-      <a href='http://twitter.com/bdainton' title='bdainton'><img src='images/bdainton.jpg'></a>
-      <a href='http://twitter.com/efalcao' title='efalcao'><img src='images/efalcao.jpg'></a>
-      <a href='http://twitter.com/rubyminer' title='rubyminer'><img src='images/rubyminer.jpg'></a>
+      <a href='http://twitter.com/bdainton' title='bdainton'><img src='images/bdainton.jpg' title='bdainton'></a>
+      <a href='http://twitter.com/efalcao' title='efalcao'><img src='images/efalcao.jpg' title='efalcao'></a>
+      <a href='http://twitter.com/rubyminer' title='rubyminer'><img src='images/rubyminer.jpg' title='rubyminer'></a>
       <script type="text/javascript" src="http://bl.tweetriver.com/bl.js?limit=8"></script>
     </div>
   </body>
